# secondbrain

./: .gitignore  README.md  hello-secondbrain.txt  main.py  pyproject.toml
docs/: DAY01_SETUP.md  architecture.md  chatgpt_context.md  command for chatgpt.txt  day01.md  day02.md  day03.md  day04.md  day05.md  decisions.md  phase1b_catalog_architecture.md  phase2_ingestion_architecture.md  project_context.md  readme.md  roadmap.md  session_context.md
experiments/: hf_test.py  test_asset.py  test_repository.py
secondbrain/catalog/: asset_repository.py  connection.py  migrate.py  schema.py  schema.sql
secondbrain/catalog/migrations/: 0001_initial_schema.sql
secondbrain/models/: asset.py  asset_type.py  storage_status.py
